# raft

./: .dir-locals.el  .gitignore  .readthedocs.yaml  .travis.yml  LICENSE  Makefile.am  README.md  README_CH.md  amalgamation.json  configure.ac  raft.spec.in
.github/workflows/: benchmark.yml  build-and-test.yml  checks.yml  coverity.yml  downstream.yml  linting.yml  tests.yml
benchmark/: disk.c  disk.h  disk_fs.c  disk_kaio.c  disk_kaio.h  disk_options.c  disk_options.h  disk_parse.c  disk_pwrite.c  disk_pwritev2.c  disk_pwritev2.h  disk_uring.c  disk_uring.h  os_disk_write.c  report.h  run.c  timer.h
docs/: algorithm.rst  api.rst  conf.py  core.rst  events.rst  index.rst  messages.rst  quick-start.rst  types.rst  updates.rst
docs/_static/css/: custom.css
docs/_themes/material/: layout.html
docs/_themes/material/static/: material.css_t
include/: raft.h  raft.h.in
include/raft/: fixture.h  uv.h
src/: byte.h  client.c  client.h  compress.c  compress.h  configuration.c  configuration.h  convert.c  convert.h  election.c  election.h  fixture.c  legacy.c  legacy.h  log.c  log.h  membership.c  membership.h  message.c  message.h  progress.c  progress.h  raft.c  random.c  random.h  recv.c  recv.h  recv_append_entries.c  recv_append_entries_result.c  recv_install_snapshot.c  recv_request_vote.c  recv_request_vote_result.c  recv_timeout_now.c  replication.c  replication.h  restore.c  restore.h  snapshot.c  snapshot.h  start.c  (+31 more)
test/fuzzy/: main_core.c  test_election.c  test_liveness.c  test_membership.c  test_replication.c
test/integration/: append_helpers.h  test_apply.c  test_assign.c  test_barrier.c  test_bootstrap.c  test_catch_up.c  test_election.c  test_init.c  test_legacy.c  test_membership.c  test_recover.c  test_replication.c  test_snapshot.c  test_start.c  test_submit.c  test_tick.c  test_transfer.c  test_uv_append.c  test_uv_init.c  test_uv_load.c  test_uv_recv.c  test_uv_send.c  test_uv_set_term.c  test_uv_snapshot_put.c  test_uv_tcp_listen.c  test_uv_truncate.c  test_uv_truncate_snapshot.c  test_voter_contacts.c
test/lib/: aio.c  cluster.c  cluster.h  dir.c  fs.sh  fsm.c  heap.c  legacy.c  legacy.h  macros.h  tracer.c  tracer.h
test/unit/: test_byte.c  test_compress.c  test_configuration.c  test_err.c  test_log.c  test_random.c  test_trail.c  test_uv_fs.c  test_uv_os.c  test_uv_writer.c
tools/benchmark/: disk.c  disk_fs.c  disk_fs.h  disk_kaio.c  disk_kaio.h  disk_options.c  disk_options.h  disk_parse.c  disk_parse.h  disk_pwrite.c  disk_pwrite.h  disk_uring.c  disk_uring.h  fs.c  fs.h  main.c  profiler.c  profiler.h  report.c  report.h  submit.c  submit.h  submit_options.h  submit_parse.c  submit_parse.h  timer.c  timer.h  tracing.c  tracing.h
